Fix backdrop filter on Safari

--- a/src/cm.css
+++ b/src/cm.css
@@ -504,6 +504,7 @@ a:focus {
     helvetica neue, helvetica, 'sans-serif';
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(20px) saturate(5);
+  -webkit-backdrop-filter: blur(20px) saturate(5);
   animation: fadeIn 150ms;
   max-height: 90%;
   transition: width 150ms, height 150ms;
